--- a/ThunderkitHenry/Assets/Editor/EntityStateEditor.asmdef
+++ b/ThunderkitHenry/Assets/Editor/EntityStateEditor.asmdef
@@ -2,7 +2,9 @@
     "name": "EntityStateEditor",
     "references": [],
     "optionalUnityReferences": [],
-    "includePlatforms": [],
+    "includePlatforms": [
+        "Editor"
+    ],
     "excludePlatforms": [],
     "allowUnsafeCode": false,
     "overrideReferences": true,
