--- a/ThunderkitHenry/Assets/Henry/ThunderHenry.asmdef
+++ b/ThunderkitHenry/Assets/Henry/ThunderHenry.asmdef
@@ -1,5 +1,5 @@
 {
-    "name": "HenryDefinition",
+    "name": "ThunderHenry",
     "references": [],
     "optionalUnityReferences": [],
     "includePlatforms": [],
