--- a/ThunderkitHenry/.gitignore
+++ b/ThunderkitHenry/.gitignore
@@ -71,3 +71,7 @@ crashlytics-build.properties
 /[Aa]ssets/[Ss]treamingAssets/aa.meta
 /[Aa]ssets/[Ss]treamingAssets/aa/*
 
+# Custom removals
+/[Aa]ssets/[Ee]ditor/PrefabReferencePropertyDrawer.cs
+/[Aa]ssets/[Ee]ditor/PrefabReferencePropertyDrawer.cs.meta
+
