--- a/ThunderkitHenry/Packages/R2API/manifest.json
+++ b/ThunderkitHenry/Packages/R2API/manifest.json
@@ -1,10 +1,11 @@
-﻿{
-	"name": "R2API",
-	"version_number": "3.0.59",
-	"website_url": "https://github.com/risk-of-thunder/R2API",
-	"description": "A modding API for Risk of Rain 2",
-	"dependencies": [
-		"bbepis-BepInExPack-5.4.9",
-		"RiskofThunder-HookGenPatcher-1.2.1"
-	]
+{
+  "namespace": "tristanmcpherson",
+  "name": "R2API",
+  "description": "A modding API for Risk of Rain 2",
+  "version_number": "4.4.1",
+  "dependencies": [
+    "bbepis-BepInExPack-5.4.9",
+    "RiskofThunder-HookGenPatcher-1.2.1"
+  ],
+  "website_url": "https://github.com/risk-of-thunder/R2API"
 }
